--- a/package.json
+++ b/package.json
@@ -32,5 +32,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-imagemin": "^6.2.0",
+    "gulp-jimp": "^1.2.9",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2"
   }
 }
