--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react_portfolio",
   "version": "0.1.0",
+  "homepage": "https://acarlie.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^3.7.2",
     "canvas": "^2.6.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.12.0",
@@ -16,6 +18,8 @@
     "trianglify": "^2.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
